# ai-log-parser

./: README.md  pyproject.toml
src/ai_log_parser/: __init__.py  cli.py
src/ai_log_parser/config/: __init__.py  default_config.yaml  loader.py
src/ai_log_parser/connectors/: base.py  file.py  s3.py  syslog.py
src/ai_log_parser/engine/: parser.py  preprocessor.py  queue.py
src/ai_log_parser/models/: schema.py
src/ai_log_parser/output/: formatter.py  writer.py
