# pyproject.toml

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "ai-log-parser"
version         = "1.0.0"
description     = "AI-powered dynamic log parser for SOC pipelines"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
authors         = [{ name = "SOC Engineering" }]
keywords        = ["soc", "log-parser", "ai", "security", "ocsf", "cef"]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
ai-parser = "ai_log_parser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_log_parser.config" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}
